<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.SignUpActivity"
    android:weightSum="1">

<!--    <androidx.appcompat.widget.Toolbar-->
<!--        android:id="@+id/sign_up_toolbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="?attr/actionBarSize"-->
<!--        android:background="@color/yellow_600"-->
<!--        android:elevation="4dp"-->
<!--        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
<!--        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->
<!--        app:title="@string/imdb">-->
<!--    </androidx.appcompat.widget.Toolbar>-->

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/yellow_600"
        android:id="@+id/home_toolbar">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_600"
            android:src="@drawable/baseline_arrow_back"
            android:layout_marginEnd="10dp"
            android:id="@+id/backToMain_btn"
            android:onClick="backToMain"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atrox"
            android:text="@string/sighUp"
            android:textColor="@color/black"
            android:textSize="30sp"/>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.90"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yourName"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_name_et"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_email_et"
                android:inputType="textEmailAddress"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_password_et"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/re_enter_password"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_repassword_et"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radio_group">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/atrox"
                    android:text="@string/male"
                    android:textSize="20sp" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/female"
                    android:fontFamily="@font/atrox"
                    android:textSize="20sp"
                    android:id="@+id/radio_female"/>
            </RadioGroup>

            <CheckBox
                android:id="@+id/agree_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/atrox"
                android:text="@string/terms_accept"
                android:textSize="20sp" />

        </LinearLayout>


    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:text="@string/sighUp"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:background="@drawable/button_shape_yellow600"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:onClick="signUp"/>

</LinearLayout>