<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_tv"
        android:text="@string/profile"
        android:textSize="30sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name_tv"
        android:text="@string/name"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/profile_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullName_tv"
        android:text="example"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintTop_toBottomOf="@id/profile_tv"
        android:layout_marginHorizontal="38dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email_tv"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullEmail_tv"
        android:text="example"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/email_tv"
        app:layout_constraintTop_toBottomOf="@id/fullName_tv"
        android:layout_marginHorizontal="35dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gender_tv"
        android:text="@string/gender"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        android:layout_marginHorizontal="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fullGender_tv"
        android:text="example"
        android:textSize="20sp"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/gender_tv"
        app:layout_constraintTop_toBottomOf="@id/fullEmail_tv"
        android:layout_marginHorizontal="24dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/ok_btn"
        android:text="@string/ok"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:background="@drawable/button_shape_yellow600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullGender_tv"
        android:layout_marginHorizontal="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>