<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.EditReportActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/yellow_600"
        android:id="@+id/edit_report_toolbar">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/yellow_600"
            android:src="@drawable/baseline_arrow_back"
            android:layout_marginEnd="10dp"
            android:id="@+id/backToMain_btn"
            android:onClick="backFromEditReport"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atrox"
            android:text="@string/editReport"
            android:textColor="@color/black"
            android:textSize="30sp"/>
    </Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.90"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_report_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/category_spinner"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"
                android:layout_marginTop="20dp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/title_edit_et"
                android:inputType="text"
                android:ellipsize="end"
                android:singleLine="false"
                android:breakStrategy="simple"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:fontFamily="@font/atrox"
                android:textSize="20sp"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/content_edit_et"
                android:inputType="text"
                android:ellipsize="end"
                android:singleLine="false"
                android:breakStrategy="simple"/>
        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_weight="0.10"
        android:text="@string/update"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:background="@drawable/button_shape_yellow600"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:onClick="editReport"/>

</androidx.constraintlayout.widget.ConstraintLayout>