<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CategoriesActivity"
    android:orientation="horizontal">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/categories_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/yellow_600">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back"
            android:background="@color/yellow_600"
            android:layout_marginEnd="10dp"
            android:id="@+id/backToHome_btn"
            android:onClick="backToHome"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/atrox"
            android:text="@string/categories"
            android:textSize="30sp"
            android:textColor="@color/black"/>

    </Toolbar>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape_yellow600"
        android:text="@string/news"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:id="@+id/news_btn"
        app:layout_constraintTop_toTopOf="@id/horizontal_guide1"
        app:layout_constraintEnd_toStartOf="@id/vertical_guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide3"
        android:layout_marginEnd="3dp"
        android:onClick="showNews"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape_yellow600"
        android:text="@string/celebs"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:id="@+id/celebs_btn"
        app:layout_constraintTop_toTopOf="@id/horizontal_guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide3"
        android:layout_marginRight="2dp"
        android:onClick="showCelebs"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@drawable/button_shape_yellow600"
        android:text="@string/movies"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:id="@+id/movies_btn"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide3"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide4"
        android:onClick="showMovies"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape_yellow600"
        android:text="@string/shows"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        android:id="@+id/shows_btn"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide4"
        app:layout_constraintEnd_toStartOf="@id/vertical_guide1"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide2"
        android:layout_marginRight="3dp"
        android:onClick="showShows"/>

    <Button
        android:id="@+id/events_btn"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:background="@drawable/button_shape_yellow600"
        android:text="@string/events"
        android:fontFamily="@font/atrox"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/shows_btn"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guide4"
        app:layout_constraintBottom_toTopOf="@id/horizontal_guide2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="2dp"
        android:onClick="showEvents"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/horizontal_guide1"
        app:layout_constraintGuide_percent=".25"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/horizontal_guide2"
        app:layout_constraintGuide_percent=".75"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guide3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="438dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/horizontal_guide4"
        app:layout_constraintGuide_percent=".60"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/vertical_guide1"
        app:layout_constraintGuide_percent=".5"/>

</androidx.constraintlayout.widget.ConstraintLayout>