<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/action_request_tv"
        android:text="@string/what_do_want_to_do_with_this_report"
        android:fontFamily="@font/atrox"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/delete_request_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_guide1"
        app:layout_constraintTop_toBottomOf="@id/action_request_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/delete"
        android:textSize="30sp"
        android:fontFamily="@font/atrox"
        android:background="@drawable/button_shape_yellow600"
        android:textColor="@color/black"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_request_btn"
        app:layout_constraintStart_toStartOf="@id/vertical_guide1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_request_tv"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/edit"
        android:textSize="30sp"
        android:fontFamily="@font/atrox"
        android:background="@drawable/button_shape_yellow600"
        android:textColor="@color/black"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vertical_guide1"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>